Revert "fixed contact-snippet overflow"

--- a/style.css
+++ b/style.css
@@ -17,14 +17,12 @@ figure,
 blockquote,
 dl,
 dd {
-  
   margin: 0;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role="list"],
 ol[role="list"] {
- 
   list-style: none;
 }
 
@@ -35,7 +33,6 @@ html:focus-within {
 
 /* Set core body defaults */
 body {
- 
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
@@ -369,30 +366,28 @@ text-align: center;
 }
 
 .contact-snippet {
- 
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   text-align: center;
-
-  flex-shrink: 1;
-  
- margin: 0 auto;
- width: 100%;
-  max-width: 2000px;
- 
-
+  /* add image background */
 }
 
 .contact-snippet ul {
-  
-overflow-wrap: break-word;
-  padding-inline-start: 0px;
-  background-color:  #c0dffc;
+  background-color: #6e9bc57a;
+  padding: 0.5rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .contact-snippet ul li {
 
+  font-size: 2.5rem;
+  text-align: center;
   list-style-type: none;
 }
 
@@ -477,12 +472,6 @@ list-style-type: none;
       display: block;
       cursor: pointer;
   }
-
-  .footer ul {
-    flex-direction: column;
-  }
-
-  
 
 }
 
